k8s/main/axonserver-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: axonserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axonserver
  serviceName: axonserver
  template:
    metadata:
      labels:
        app: axonserver
    spec:
      containers:
        - image: axoniq/axonserver:2023.1.2-jdk-17-dev
          name: axonserver
          ports:
            - containerPort: 8024
            - containerPort: 8124
            - containerPort: 8224
          volumeMounts:
            - mountPath: /data
              name: axonserver-data
            - mountPath: /eventdata
              name: axonserver-events
            - mountPath: /config
              name: axonserver-config
              readOnly: true
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8024
            initialDelaySeconds: 60
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8024
            initialDelaySeconds: 60
            periodSeconds: 60
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
      restartPolicy: Always
      volumes:
        - name: axonserver-data
          persistentVolumeClaim:
            claimName: axonserver-data
        - name: axonserver-events
          persistentVolumeClaim:
            claimName: axonserver-events
        - name: axonserver-config
          persistentVolumeClaim:
            claimName: axonserver-config
            readOnly: true
