k8s/main/delivery-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
        - env:
            - name: AXON_AXONSERVER_SERVERS
              value: axonserver
            - name: AXONIQ_CONSOLE_CREDENTIALS
              value: "68447ea9-1:b8b5aeb75a1a48b89b4a8b10a0be3282"
            - name: SPRING_PROFILES_ACTIVE
              value: gmaps
            - name: GMAPS_API_KEY
              valueFrom:
                secretKeyRef:
                  name: gmaps-api-key
                  key: key
          image: ghcr.io/bartlomiejrasztabiga/thesis/delivery:0.20.7
          name: delivery-service
          ports:
            - containerPort: 8104
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8104
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8104
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"
      restartPolicy: Always
