k8s/main/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - env:
            - name: API_GATEWAY_URL
              value: https://thesis.rasztabiga.me
            - name: SESSION_SECRET
              value: "0a471d50870e4085be3e64fdc627dc87"
            - name: AUTH_CALLBACK_URL
              value: "https://thesis.rasztabiga.me/auth/auth0/callback"
            - name: AUTH_CLIENT_ID
              value: "3gSK8og83MMTCUlNrzGNfnzpBNyLlpTS"
            - name: AUTH_CLIENT_SECRET
              value: "fxntskIoYgCCXgxT-DYzTZraK4OwX-mwAcv8C4kZdszLDedqdtuwgTK8xB840C2G"
          image: ghcr.io/bartlomiejrasztabiga/thesis/frontend:0.19.6
          name: frontend
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"
      restartPolicy: Always
