k8s/main/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - env:
            - name: URI_RESTAURANT
              value: http://restaurant-service:8101
            - name: URI_ORDER
              value: http://order-service:8102
            - name: URI_PAYMENT
              value: http://payment-service:8103
            - name: URI_DELIVERY
              value: http://delivery-service:8104
            - name: URI_QUERY
              value: http://query-service:8105
          image: ghcr.io/bartlomiejrasztabiga/thesis/gateway:latest
          name: gateway
          ports:
            - containerPort: 8100
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8100
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8100
            initialDelaySeconds: 30
            periodSeconds: 10
      restartPolicy: Always
