k8s/main/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - env:
            - name: AXON_AXONSERVER_SERVERS
              value: axonserver
            - name: AXONIQ_CONSOLE_CREDENTIALS
              value: "68447ea9-1:b8b5aeb75a1a48b89b4a8b10a0be3282"
          image: ghcr.io/bartlomiejrasztabiga/thesis/order:0.19.36
          name: order-service
          ports:
            - containerPort: 8102
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8102
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8102
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"
      restartPolicy: Always
