k8s/main/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - env:
            - name: AXON_AXONSERVER_SERVERS
              value: axonserver
            - name: AXONIQ_CONSOLE_CREDENTIALS
              value: "68447ea9-1:b8b5aeb75a1a48b89b4a8b10a0be3282"
            - name: SPRING_PROFILES_ACTIVE
              value: mailjet,stripe,invoice
            - name: MAILJET_API_KEY_PUBLIC
              valueFrom:
                secretKeyRef:
                  name: mailjet-api-key
                  key: public
            - name: MAILJET_API_KEY_PRIVATE
              valueFrom:
                secretKeyRef:
                  name: mailjet-api-key
                  key: private
            - name: STRIPE_API_KEY
              valueFrom:
                secretKeyRef:
                  name: stripe-api-key
                  key: key
            - name: STRIPE_ENDPOINT_SECRET
              valueFrom:
                secretKeyRef:
                  name: stripe-api-key
                  key: endpoint-secret
            - name: STRIPE_FRONTEND_DOMAIN
              valueFrom:
                secretKeyRef:
                  name: stripe-api-key
                  key: frontend-domain
          image: ghcr.io/bartlomiejrasztabiga/thesis/payment:0.19.38
          name: payment-service
          ports:
            - containerPort: 8103
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8103
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8103
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"
      restartPolicy: Always
