k8s/main/query-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: query-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-db
  serviceName: query-db
  template:
    metadata:
      labels:
        app: query-db
    spec:
      containers:
        - image: mongo:7.0.2
          name: query-db
          ports:
            - containerPort: 27101
          volumeMounts:
            - mountPath: /data/db
              name: query-db-data
          resources:
            requests:
              memory: "500Mi"
              cpu: "125m"
      restartPolicy: Always
      volumes:
        - name: query-db-data
          persistentVolumeClaim:
            claimName: query-db-data
