k8s/main/saga-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saga-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saga-service
  template:
    metadata:
      labels:
        app: saga-service
    spec:
      containers:
        - env:
            - name: AXON_AXONSERVER_SERVERS
              value: axonserver
            - name: AXONIQ_CONSOLE_CREDENTIALS
              value: "68447ea9-1:b8b5aeb75a1a48b89b4a8b10a0be3282"
            - name: SPRING_DATA_MONGODB_URI
              value: "mongodb://root:password@saga-db:27017/saga?authSource=admin"
          image: ghcr.io/bartlomiejrasztabiga/thesis/saga:0.19.19
          name: saga-service
          ports:
            - containerPort: 8106
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8106
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8106
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: "250Mi"
              cpu: "125m"
      restartPolicy: Always
