k8s/main/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  ports:
    - name: "8100"
      port: 8100
      targetPort: 8100
  selector:
    app: gateway
