k8s/main/payment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  ports:
    - name: "8103"
      port: 8103
      targetPort: 8103
  selector:
    app: payment-service
